stuff for new contract

--- a/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
@@ -1,74 +1,299 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/new_contract_container">
+    android:layout_height="match_parent" >
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/apartment_name_label"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
-        style="@style/AppTheme.EditTextLabel"
-        android:layout_height="0dp"
-        android:layout_width="0dp"
-        tools:layout_editor_absoluteX="30dp">
-
-        <EditText
-            style="@style/AppTheme.EditText"
-            android:id="@+id/apartment_name"
-            android:inputType="text"
-            android:hint="@string/apartment_name"/>
-
-    </android.support.design.widget.TextInputLayout>
-
-    <LinearLayout
-        android:layout_width="344dp"
+    <android.support.constraint.ConstraintLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/apartment_name_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteX="8dp">
+        android:id="@+id/new_contract_container">
+
+        <LinearLayout
+            android:id="@+id/apt_name_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/apartment_name_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="2"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/apartment_name"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/apartment_name"
+                    android:inputType="text" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/apartment_number_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/apartment_number"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/apartment_number"
+                    android:inputType="number" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/dates_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/apt_name_container"
+            tools:layout_editor_absoluteX="0dp" >
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/sell_by_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/sell_by"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/sell_by"
+                    android:inputType="date" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/date_available_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/date_available"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/date_available"
+                    android:inputType="date" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/apartment_number_label"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:id="@+id/address_line_1_label"
+            app:layout_constraintTop_toBottomOf="@+id/dates_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
-            android:layout_marginEnd="15dp"
-            style="@style/AppTheme.EditTextLabel">
+            style="@style/AppTheme.EditTextLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="30dp">
 
             <EditText
-                style="@style/AppTheme.EditText"
-                android:id="@+id/apartment_number"
-                android:inputType="number"
-                android:hint="@string/apartment_number"/>
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/sell_by_label"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
-            android:layout_marginStart="5dp"
-            style="@style/AppTheme.EditTextLabel">
-
-            <EditText
-                android:id="@+id/sell_by"
-                android:inputType="date"
-                android:hint="@string/sell_by"
+                android:id="@+id/address_line_1"
+                android:hint="@string/address"
                 style="@style/AppTheme.EditText" />
 
         </android.support.design.widget.TextInputLayout>
 
-    </LinearLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/address_line_2_label"
+            app:layout_constraintTop_toBottomOf="@+id/address_line_1_label"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
+            style="@style/AppTheme.EditTextLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="30dp">
 
-</android.support.constraint.ConstraintLayout>
+            <EditText
+                android:id="@+id/address_line_2"
+                android:hint="@string/address_2"
+                style="@style/AppTheme.EditText" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:id="@+id/additional_address_container"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/address_line_2_label"
+            tools:layout_editor_absoluteX="0dp"
+            android:layout_width="0dp">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/city_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="2"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/city"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/city" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/state_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/state"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/state"
+                    android:inputType="date" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/postal_code_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_weight="1"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/postal_code"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/postal_code"
+                    android:inputType="date" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/price_marital_sex_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/additional_address_container"
+            tools:layout_editor_absoluteX="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/money_sign"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="7dp"
+                android:textSize="15sp"
+                android:textColor="@color/greyedText"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/price_label"
+                style="@style/AppTheme.EditTextLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="0dp"
+                android:layout_weight="1"
+                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+                <EditText
+                    android:id="@+id/price"
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/price_per_month_label"
+                    android:inputType="date" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <Spinner
+                android:id="@+id/marital_status_spinner"
+                style="@style/AppTheme.Spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:paddingBottom="5dp" />
+
+            <Spinner
+                android:id="@+id/sex_spinner"
+                style="@style/AppTheme.Spinner"
+                android:layout_width="0dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingBottom="5dp" />
+
+        </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/additional_info_label"
+            app:layout_constraintTop_toBottomOf="@id/price_marital_sex_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme"
+            style="@style/AppTheme.EditTextLabel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/additional_info"
+                android:hint="@string/additional_info"
+                style="@style/AppTheme.EditText.MultiLine" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/add_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/additional_info_label"
+            app:layout_constraintStart_toStartOf="parent"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textColor="@color/colorPrimaryLight"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:text="@string/add_image" />
+
+        <ImageView
+            android:id="@+id/imgView"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
