--- a/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
@@ -177,8 +177,7 @@
                 <EditText
                     android:id="@+id/state"
                     style="@style/AppTheme.EditText"
-                    android:hint="@string/state"
-                    android:inputType="date" />
+                    android:hint="@string/state" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -195,7 +194,7 @@
                     android:id="@+id/postal_code"
                     style="@style/AppTheme.EditText"
                     android:hint="@string/postal_code"
-                    android:inputType="date" />
+                    android:inputType="number" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -276,12 +275,23 @@
 
         </android.support.design.widget.TextInputLayout>
 
+
+        <ImageView
+            android:id="@+id/imgView"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/additional_info_label"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true" />
+
         <Button
             android:id="@+id/add_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/additional_info_label"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imgView"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:textColor="@color/colorPrimaryLight"
             android:layout_marginTop="10dp"
@@ -289,10 +299,36 @@
             android:layout_marginEnd="30dp"
             android:text="@string/add_image" />
 
-        <ImageView
-            android:id="@+id/imgView"
-            android:layout_width="100dp"
-            android:layout_height="100dp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/imgView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="15dp">
+
+            <Button
+                android:id="@+id/cancel_contract_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_margin="15dp"
+                style="@style/AppTheme.Button"
+                android:text="@string/cancel_btn"/>
+
+            <Button
+                android:id="@+id/create_contract_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_margin="15dp"
+                style="@style/AppTheme.PrimaryButton"
+                android:text="@string/save_btn"/>
+
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 
