--- a/RoomMe/app/src/main/res/layout/fragment_login.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_login.xml
@@ -125,6 +125,10 @@
                     android:background="@color/colorPrimaryDark" />
 
             </LinearLayout-->
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <Button
                 style="@style/AppTheme.SecondaryButton"
