--- a/RoomMe/app/src/main/res/layout/activity_login.xml
+++ b/RoomMe/app/src/main/res/layout/activity_login.xml
@@ -58,99 +58,97 @@
                 style="@style/AppTheme.EditTextLabel">
 
                 <EditText
-                    style="@style/AppTheme.EditText"
                     android:id="@+id/password"
-                    android:inputType="textPassword"
-                    android:hint="@string/login_password"/>
+                    style="@style/AppTheme.EditText"
+                    android:hint="@string/login_password"
+                    android:inputType="textPassword" />
 
             </android.support.design.widget.TextInputLayout>
 
         </GridLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/login_btn_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="351dp"
+            android:layout_height="275dp"
             android:orientation="vertical"
             android:gravity="center_horizontal"
             app:layout_constraintTop_toBottomOf="@+id/login_grid"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:layout_editor_absoluteX="0dp">
+            tools:layout_editor_absoluteX="29dp"
+            android:layout_marginTop="-33dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.757">
 
-            <Button
-                style="@style/AppTheme.PrimaryButton"
-                android:text="@string/login_btn"
-                android:id="@+id/login_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
-                android:layout_marginBottom="45dp"/>
-
-            <!--TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/forgot_password"
-                />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp">
-
-                <View
-                    style="@style/AppTheme.Text"
-                    android:layout_width="0dp"
-                    android:layout_height="2dp"
-                    android:layout_weight="4"
-                    android:background="@color/colorPrimaryDark" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:padding="5dp"
-                    android:text="@string/or"
-                    style="@style/AppTheme.Text"/>
-
-                <View
-                    style="@style/AppTheme.Text"
-                    android:layout_width="0dp"
-                    android:layout_height="2dp"
-                    android:layout_weight="4"
-                    android:background="@color/colorPrimaryDark" />
-
-            </LinearLayout-->
 
             <Button
                 android:id="@+id/register"
                 style="@style/AppTheme.SecondaryButton"
-                android:text="@string/register_btn" />
+                android:layout_width="190dp"
+                android:text="@string/register_btn"
+                android:textSize="12sp"
+                android:layout_alignTop="@+id/login_btn"
+                android:layout_marginTop="48dp"
+                />
 
-        </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/login_btn_layout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:layout_editor_absoluteX="8dp">
+            <View
+                android:layout_width="130dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="150dp"
+                android:background="@android:color/darker_gray"
+                android:id="@+id/view" />
+            <View
+                android:layout_width="130dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="150dp"
+                android:background="@android:color/darker_gray"
+                android:layout_marginLeft="180dp"
+                android:id="@+id/view2" />
 
-            <ProgressBar
-                style="?android:attr/progressBarStyle"
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/progressBar"
-                android:progressDrawable="@drawable/circle_progress_bar"
-                android:layout_centerHorizontal="true"
-                android:theme="@style/SwitchTheme"
-                android:visibility="gone" />
+                android:layout_below="@+id/register"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="49dp"
+                android:layout_marginLeft="60dp"/>
+
+
+            <Button
+                android:id="@+id/login_btn"
+                style="@style/AppTheme.PrimaryButton"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/login_btn"
+                android:textSize="12dp" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OR"
+                android:layout_marginTop="140dp"
+                android:layout_marginLeft="145dp"/>
+
+            <TextView
+                android:id="@+id/forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sign_in_button"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="14dp"
+                android:text="Forgot Password?"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold" />
+
 
         </RelativeLayout>
 
