--- a/RoomMe/app/src/main/res/menu/navigation.xml
+++ b/RoomMe/app/src/main/res/menu/navigation.xml
@@ -15,6 +15,7 @@
 
     <item
         android:id="@+id/navigation_more"
+        android:icon="@drawable/ic_profile"
         android:title="@string/more" />
 
 </menu>
