--- a/RoomMe/app/src/main/res/layout/activity_contract.xml
+++ b/RoomMe/app/src/main/res/layout/activity_contract.xml
@@ -25,22 +25,31 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/text_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                card_view:srcCompat="@drawable/ic_text"
+                android:layout_alignTop="@+id/caller"
+                android:layout_toEndOf="@+id/email"
+                android:layout_marginLeft="35dp"/>
+
+            <ImageView
                 android:id="@+id/caller"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                card_view:srcCompat="@drawable/ic_action_phone"
                 android:layout_alignTop="@+id/email"
-                android:layout_marginRight="32dp"
-                android:layout_toStartOf="@id/email"
-                card_view:srcCompat="@drawable/ic_action_phone" />
+                android:layout_alignEnd="@+id/genderRoomType" />
 
             <ImageView
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="14dp"
-                card_view:srcCompat="@drawable/ic_action_name" />
+                card_view:srcCompat="@drawable/ic_action_name"
+                android:layout_below="@+id/imageView"
+                android:layout_marginLeft="120dp" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -56,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/email"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="102dp"
                 android:layout_toEndOf="@+id/email" />
 
             <TextView
@@ -129,10 +138,10 @@
                 android:id="@+id/sellBy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/notes"
-                android:layout_alignStart="@+id/email"
                 android:text="12/23/17"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:layout_above="@+id/notes"
+                android:layout_marginLeft="165dp" />
 
             <TextView
                 android:id="@+id/notes"
