--- a/RoomMe/app/src/main/res/menu/navigation.xml
+++ b/RoomMe/app/src/main/res/menu/navigation.xml
@@ -16,6 +16,6 @@
     <item
         android:id="@+id/navigation_more"
         android:icon="@drawable/ic_profile"
-        android:title="@string/more" />
+        android:title="@string/profile" />
 
 </menu>
