--- a/RoomMe/app/src/main/res/layout/filter_buy.xml
+++ b/RoomMe/app/src/main/res/layout/filter_buy.xml
@@ -135,16 +135,57 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/apply_filter"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/date_available_label"
+        style="@style/AppTheme.EditTextLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/select_sex_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="75dp"
+        android:layout_marginEnd="75dp"
+        app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+
+        <EditText
+            android:id="@+id/available_by"
+            style="@style/AppTheme.EditText"
+            android:hint="@string/available_by"
+            android:inputType="date" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="20sp"
-        style="@style/AppTheme.PrimaryButton"
-        android:layout_marginBottom="30dp"
-        android:text="@string/apply"/>
+        android:layout_margin="15dp"
+        android:gravity="end">
+
+        <Button
+            android:id="@+id/clear_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textColor="@color/colorPrimary"
+            android:padding="20dp"
+            android:text="@string/clear"/>
+
+        <Button
+            android:id="@+id/apply_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textColor="@color/colorPrimary"
+            android:padding="20dp"
+            android:text="@string/apply"/>
+
+    </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
