--- a/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
@@ -13,50 +13,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/new_contract_container">
 
-        <LinearLayout
-            android:id="@+id/apt_name_container"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/apartment_name_label"
+            style="@style/AppTheme.EditTextLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp">
+            app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/apartment_name_label"
-                style="@style/AppTheme.EditTextLabel"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="2"
-                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
+            <EditText
+                android:id="@+id/apartment_name"
+                style="@style/AppTheme.EditText"
+                android:hint="@string/apartment_name"
+                android:inputType="text" />
 
-                <EditText
-                    android:id="@+id/apartment_name"
-                    style="@style/AppTheme.EditText"
-                    android:hint="@string/apartment_name"
-                    android:inputType="text" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/apartment_number_label"
-                style="@style/AppTheme.EditTextLabel"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_weight="1"
-                app:hintTextAppearance="@style/AppTheme.EditTextLabelColorTheme">
-
-                <EditText
-                    android:id="@+id/apartment_number"
-                    style="@style/AppTheme.EditText"
-                    android:hint="@string/apartment_number"
-                    android:inputType="number" />
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
+        </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
             android:id="@+id/dates_container"
@@ -64,7 +37,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/apt_name_container"
+            app:layout_constraintTop_toBottomOf="@+id/apartment_name_label"
             tools:layout_editor_absoluteX="0dp" >
 
             <android.support.design.widget.TextInputLayout
