--- a/RoomMe/app/src/main/res/layout/filter_buy.xml
+++ b/RoomMe/app/src/main/res/layout/filter_buy.xml
@@ -155,6 +155,18 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <ImageButton
+        android:id="@+id/clear_available_by_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/date_available_label"
+        app:layout_constraintEnd_toEndOf="@id/date_available_label"
+        app:layout_constraintBottom_toBottomOf="@id/date_available_label"
+        android:background="@null"
+        android:paddingStart="15dp"
+        android:paddingEnd="5dp"
+        android:src="@drawable/ic_close"/>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
