--- a/RoomMe/app/src/main/res/layout/cards_layout.xml
+++ b/RoomMe/app/src/main/res/layout/cards_layout.xml
@@ -24,11 +24,13 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="165dp"
+                android:layout_height="155dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:id="@+id/imageView" />
+                android:layout_marginBottom="15dp"
+                android:src="@drawable/theriv" />
 
             <TextView
                 android:id="@+id/costOfRent"
