--- a/RoomMe/app/src/main/res/layout/cards_layout.xml
+++ b/RoomMe/app/src/main/res/layout/cards_layout.xml
@@ -30,6 +30,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="15dp"
+                android:layout_marginTop="9dp"
                 android:src="@drawable/theriv" />
 
             <TextView
