--- a/RoomMe/app/src/main/res/layout/filter_buy.xml
+++ b/RoomMe/app/src/main/res/layout/filter_buy.xml
@@ -81,7 +81,7 @@
         android:id="@+id/select_marital_status_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/price_range"
+        app:layout_constraintTop_toBottomOf="@+id/date_available_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="10dp"
@@ -140,7 +140,7 @@
         style="@style/AppTheme.EditTextLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/select_sex_container"
+        app:layout_constraintTop_toBottomOf="@id/price_range"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="75dp"
@@ -174,7 +174,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="15dp"
-        android:gravity="end">
+        android:gravity="center">
 
         <Button
             android:id="@+id/clear_filter"
