--- a/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_new_contract.xml
@@ -179,6 +179,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="30dp"
             app:layout_constraintTop_toBottomOf="@+id/additional_address_container"
             tools:layout_editor_absoluteX="0dp">
 
