--- a/RoomMe/app/src/main/res/layout/fragment_sell.xml
+++ b/RoomMe/app/src/main/res/layout/fragment_sell.xml
@@ -25,8 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="15dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
+        android:layout_alignBottom="@id/sell_recycler_view"
+        android:layout_marginBottom="15dp"
         android:src="@drawable/ic_new"
         android:background="@color/colorAccent" />
 
